--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                     <button onclick="toggleEmojiBar()" class="h-10 w-10 rounded-full text-slate-500 dark:text-slate-400 hover:text-yellow-500 hover:bg-yellow-500/10 transition flex items-center justify-center"><i class="fa-regular fa-face-smile text-lg"></i></button>
                     
                     <div class="flex-1 min-h-[44px] flex items-center px-2 py-1">
-                        <textarea id="message-input" rows="1" placeholder="اكتبي رسالة يا هنوءة 👀♥️" class="w-full bg-transparent text-slate-800 dark:text-white placeholder-slate-400 dark:placeholder-slate-500 focus:outline-none resize-none py-2 max-h-24 text-sm font-medium" oninput="handleTyping(); this.style.height='';this.style.height=this.scrollHeight+'px'" onkeypress="handleKeyPress(event)"></textarea>
+                        <textarea id="message-input" rows="1" placeholder="اكتبي رسالة يا هنوءة" class="w-full bg-transparent text-slate-800 dark:text-white placeholder-slate-400 dark:placeholder-slate-500 focus:outline-none resize-none py-2 max-h-24 text-sm font-medium" oninput="handleTyping(); this.style.height='';this.style.height=this.scrollHeight+'px'" onkeypress="handleKeyPress(event)"></textarea>
                     </div>
                     
                     <button id="record-btn" onclick="startRecording()" class="h-10 w-10 rounded-full text-slate-500 dark:text-slate-400 hover:text-red-500 hover:bg-red-500/10 transition flex items-center justify-center"><i class="fa-solid fa-microphone text-lg"></i></button>
